--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ __pycache__/
 
 # C extensions
 *.so
-
 # Distribution / packaging
 .Python
 build/
@@ -109,14 +108,14 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+.env*
+.env.prod
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
-
 # Spyder project settings
 .spyderproject
 .spyproject
