--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ nonebot-adapter-onebot="^2.0.0-beta.1"
 nb-cli = "^0.6.0"
 
 [tool.nonebot]
-plugins = ["nonebot_plugin_apscheduler"]
+plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_course"]
 plugin_dirs = ["qqbot/plugins"]
 
 [build-system]
